--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,11 +19,10 @@ jobs:
           name: webpack artifacts
           path: public/
 
-
   test:
-
+    needs: build
     runs-on: ubuntu-latest
-
+    
     strategy:
       matrix:
         os: [ubuntu-latest, windows-2016]
@@ -31,6 +30,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/download-artifact@main
+      with: 
+        name: webpack artifacts
+        path: public
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
@@ -41,3 +44,4 @@ jobs:
         npm test
       env:
         CI: true
+
